log/build_2023-03-01_14-28-25/qbert_py_movement/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/johnma/ros2_ws/install/qbert_py_movement/lib/python3.10/site-packages/qbert_py_movement/wanderer.py", line 23
    for i in range(0, len(haz.detections))
                                          ^
SyntaxError: expected ':'

